--- a/styles.css
+++ b/styles.css
@@ -491,22 +491,13 @@ overflow: hidden;
     
 }
 
-.documentary-img img:first-child {
+.documentary-img iframe{
     width: 100%;
     display: block;
-    height: auto;
-    transform:rotate(180deg);
+    height: 600px;
 }
 
-.documentary-img img:last-child {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80px; 
-    height: auto;
-    z-index: 2;
-}
+
 
 
 /*------------------------------------------FOOTER-----------------------------------*/
