Desktop Version (With video now)3.0

--- a/styles.css
+++ b/styles.css
@@ -491,7 +491,7 @@ overflow: hidden;
     
 }
 
-.documentary-img iframe{
+.documentary-img video{
     width: 100%;
     display: block;
     height: 600px;
